@@ -64,7 +64,7 @@ public class WebTest {
         String url = "http://" + host + ":" + port + contextRoot
                      + "/checkresult";
         HttpURLConnection conn = (HttpURLConnection)
-            (new URL(url)).openConnection();
+            URI.create(url).toURL().openConnection();
         int code = conn.getResponseCode();
         if (code != 200) {
             throw new Exception("Unexpected return code: " + code);
@@ -74,7 +74,7 @@ public class WebTest {
 
         Thread.sleep(65 * 1000);
 
-        conn = (HttpURLConnection) (new URL(url)).openConnection();
+        conn = (HttpURLConnection) URI.create(url).toURL().openConnection();
         conn.addRequestProperty("Cookie", JSESSIONID + "=" + sessionId1);
         code = conn.getResponseCode();
         if (code != 200) {
