@@ -67,7 +67,7 @@ public class WebTest {
 
     private void invokeJsp() throws Exception {
 
-        URL url = new URL("http://" + host + ":" + port + "/test.jsp");
+        URL url = URI.create("http://" + host + ":" + port + "/test.jsp").toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
