@@ -59,8 +59,8 @@ public class WebTest {
 
     public void doTest() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port
-                          + contextRoot + "/TestServlet");
+        URL url = URI.create("http://" + host  + ":" + port
+                          + contextRoot + "/TestServlet").toURL();
         System.out.println("Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
