@@ -78,7 +78,7 @@ public class WebTest {
 
         jsessionId = accessServlet();
         String redirect = accessLoginPage();
-        followRedirect(new URL(redirect).getPath());
+        followRedirect(URI.create(redirect).toURL().getPath());
     }
 
     /*
